--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://shiatsuki.netlify.com"
+baseURL = "https://shiatsuki.netlify.com"
 languageCode = "en-us"
 summaryLength = "10"
 theme = "kross-hugo"
