--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -21,10 +21,10 @@ name = "Contact"
 weight = 5
 [params]
 address = "125/A, CA Commercial Area, California, USA"
-author = "Alan Pacaud"
-copyright = "Copyright &copy; 2020 a theme by [gethugothemes](https://gethugothemes.com)"
-description = "This is meta description"
-email = "steve.fruits@email.com"
+author = "Marie Poidevin"
+copyright = "Copyright &copy; 2020 a site created by [Alan Pacaud](https://github.com/alanpacaud)"
+description = "Praticienne en Shiatsu"
+email = "marie.poidevin@gmail.com"
 google_analytics_id = ""
 home = "Home"
 logo = "images/logo.png"
