--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -27,7 +27,7 @@ description = "Praticienne en Shiatsu"
 email = "marie.poidevin@gmail.com"
 google_analytics_id = ""
 home = "Home"
-logo = "images/logo.png"
+logo = "images/logo-libellule-final.png"
 phone = "+880 2544 658 256"
 theme_color = "#41228e"
 [params.contact]
