banner title update

--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -1,6 +1,6 @@
 # banner
 banner:
-  title : "Hi! I’m <br> Christoher <br> UX designer"
+  title : "Hey! Je suis <br> Marie Poidevin <br> Praticienne en Shiatsu"
 
 # about
 about:
