--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -5,7 +5,14 @@ banner:
 # about
 about:
   enable : true
-  content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+  item:
+    - logo: "images/home1.png"
+      content: "Ancienne sportive de haut niveau en roller de vitesse,
+      le dépassement de soi est une notion que j'ai rendu concrète pendant des années.
+      Au croisement de recherches et de rencontres, j'ai choisi de suivre l'enseignement du shiatsu.
+      C’est une technique douce visant à soulager des problématiques physiques, mentales et émotionnelles.
+      Les fondements théoriques de ce soin corporel Japonais sont issus de l’énergétique Chinoise.
+      J’enrichie mon savoir-faire en suivant régulièrement des formations afin de m’adapter à vos besoins."
   button:
     enable : true
     label : "know more"
