--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -7,7 +7,7 @@ about:
   enable : true
   logo: "images/home1.png"
   title: "Marie Poidevin"
-  content: "Après 8 ans de sport de haut niveau, j'ai dû ré-apprendre à écouter mon corps, à respecter mon rythme. <br>
+  content: "Après 8 ans de sport de haut niveau, j'ai dû ré-apprendre à écouter mon corps, à respecter mon rythme.
   Le shitsu est ma façon d'accompagner chacun.e à reprendre contact avec le corps. En prendre soin pour recréer le lien
    entre nos ressentis et nos besoins."
   button:
