--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -11,7 +11,7 @@ about:
       Le shitsu est ma façon d'accompagner chacun.e à reprendre contact avec le corps. En prendre soin pour recréer le lien
    entre nos ressentis et nos besoins."
   button:
-    enable : true
+    enable : false
     label : "know more"
     URL : "about"
 
